Add resources directory

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
         <sourceDirectory>${project.basedir}/src/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/test/kotlin</testSourceDirectory>
 
+        <resources>
+            <resource>
+                <directory>${project.basedir}/resources</directory>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
