--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <surfire.version>2.19.1</surfire.version>
         <spek.version>1.1.0</spek.version>
         <dokka.version>0.9.13</dokka.version>
+        <progressindicator.version>0.1.0</progressindicator.version>
         <simplednn.version>0.1.0</simplednn.version>
         <conllio.version>0.1.0</conllio.version>
         <jsoniter.version>0.9.2</jsoniter.version>
@@ -146,6 +147,12 @@
             <artifactId>spek-junit-platform-engine</artifactId>
             <version>${spek.version}</version>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>progressindicator</artifactId>
+            <version>${progressindicator.version}</version>
         </dependency>
 
         <dependency>
