--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.1.4-3</kotlin.version>
+        <kotlin.version>1.1.51</kotlin.version>
         <surfire.version>2.19.1</surfire.version>
-        <spek.version>1.1.0</spek.version>
+        <spek.version>1.1.4</spek.version>
         <dokka.version>0.9.13</dokka.version>
         <progressindicator.version>0.1.0</progressindicator.version>
         <simplednn.version>0.1.0</simplednn.version>
