--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,9 @@
         <dokka.version>0.9.13</dokka.version>
         <jsoniter.version>0.9.2</jsoniter.version>
         <progressindicator.version>1.0.0</progressindicator.version>
-        <simplednn.version>0.2.0</simplednn.version>
+        <simplednn.version>0.9.0</simplednn.version>
         <conllio.version>0.1.0</conllio.version>
+        <utils.version>2.1.0</utils.version>
     </properties>
 
     <pluginRepositories>
@@ -76,7 +77,6 @@
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>src/test/kotlin</testSourceDirectory>
 
         <resources>
             <resource>
@@ -266,6 +266,12 @@
             <groupId>com.kotlinnlp</groupId>
             <artifactId>conllio</artifactId>
             <version>${conllio.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>utils</artifactId>
+            <version>${utils.version}</version>
         </dependency>
     </dependencies>
 </project>
