--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <surfire.version>2.19.1</surfire.version>
         <spek.version>1.1.5</spek.version>
         <dokka.version>0.9.16</dokka.version>
-        <jsoniter.version>0.9.2</jsoniter.version>
+        <klaxon.version>3.0.5</klaxon.version>
         <simplednn.version>0.9.0</simplednn.version>
         <conllio.version>0.1.2</conllio.version>
         <utils.version>2.1.0</utils.version>
@@ -250,9 +250,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.jsoniter</groupId>
-            <artifactId>jsoniter</artifactId>
-            <version>${jsoniter.version}</version>
+            <groupId>com.beust</groupId>
+            <artifactId>klaxon</artifactId>
+            <version>${klaxon.version}</version>
         </dependency>
 
         <dependency>
