--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -15,6 +15,7 @@
         <assembly-plugin.version>2.6</assembly-plugin.version>
         <kotlin.version>1.2.41</kotlin.version>
         <neuraltokenizer.version>0.3.1</neuraltokenizer.version>
+        <linguisticdescription.version>0.8.1</linguisticdescription.version>
         <simplednn.version>0.11.0</simplednn.version>
     </properties>
 
@@ -116,6 +117,11 @@
             <groupId>com.kotlinnlp</groupId>
             <artifactId>neuraltokenizer</artifactId>
             <version>${neuraltokenizer.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.kotlinnlp</groupId>
+            <artifactId>linguisticdescription</artifactId>
+            <version>${linguisticdescription.version}</version>
         </dependency>
 
         <dependency>
